Fixed checkstyle warnings.